magcloud-backend-api/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: magcloud
  labels:
    name: magcloud
