magcloud-backend-api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magcloud-backend-api
  namespace: magcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magcloud-backend-api
  template:
    metadata:
      labels:
        app: magcloud-backend-api
    spec:
      containers:
        - name: webserver
          image: 463935167443.dkr.ecr.ap-northeast-2.amazonaws.com/magcloud-backend-api:f951f7fc95c5931bf6372fbc4ba540f3e47257cd
          resources:
            requests:
              memory: "1Gi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 8080
