magcloud-backend-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: magcloud-backend-api
  namespace: magcloud
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: magcloud-backend-api
