magcloud-backend-api/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: magcloud-backend-api
  namespace: magcloud
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/target-type: 'ip'
    alb.ingress.kubernetes.io/group.name: "dsc-clsuter"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  tls:
    - hosts:
        - magcloud.bearus.co
  rules:
    - host: "magcloud.bearus.co"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: magcloud-backend-api
                port:
                  number: 80
