magcloud-backend-api/base/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: magcloud-backend-api
  namespace: magcloud
spec:
  hosts:
    - "magcloud.chuyong.kr"
  gateways:
    - magcloud-backend-api
  http:
    - name: "default-routes"
      route:
        - destination:
            host: magcloud-backend-api
            port:
              number: 80
